public/style.css
* ,*>::after, *>::before
{
    box-sizing: border-box;
}

@font-face {
    font-family: fontTitle;
    src: url(fonts/Roboto_Slab/RobotoSlab-Regular.ttf);
  }

  @font-face {
    font-family: fontDefinition;
    src: url(fonts/Sanchez/Sanchez-Italic.ttf);
  }

  @keyframes fadeIn
  {
    0% { opacity: 0;}
    100% { opacity: 1;}
  }

html{
font-family: fontTitle, 'Times New Roman', Times, serif;
overflow: hidden;
background-color: white;
color: rgb(30,30,30);
/*
--sidebarHeightRemRatio: 0.333;
--sidebarHeightPxRatio: calc(1 - --sidebarHeightRemRatio);
--sidebarHeight: calc( calc( calc(5rem * --sidebarHeightRemRatio) + calc(80px * --sidebarHeightPxRatio)));*/
}

body{
margin: 0;
}



#mainGrid{
    display:grid;
    grid-template-columns: 5rem 1fr;
    overflow: hidden;
    max-height: 100vh;
    min-height: 100vh;

}

.scrollContainer{
display: block;
min-height:100vh;
max-height:100vh;
overflow-x: hidden;
overflow-y: scroll;
margin: 0 0 0 0;
scroll-snap-type: y proximity;
position: relative;
}

#wordContainer
{
    padding-left: 2rem;
    padding-right: 2rem;
}

.loadContentTrigger
{
    text-align: center;
    padding: 2rem 0rem;
    margin: 0;
    position: absolute;
    width: calc( 100vw - 64px);
    left:0;
}

#loadContentTriggerTop
{
    top:0;
}

#loadContentTriggerBottom
{
    position: relative;
    bottom:0;
}

.loadContentTrigger>p
{
text-align: center;
}
.loadContentButton
{
margin: 0 auto;
}

.dictTreeElem
{
    animation-name: fadeIn;
    animation-duration: 1s;
}


.dictWord{
    position: sticky;
    top: 30vh;
    font-size: 5rem;
    display: inline-block;
color: rgb(38, 42, 51);
border: 0px solid red;
margin-top: -1em;
margin-bottom: 0;
line-height: 1em;

margin-left: 6%;
white-space: nowrap;
}

.scrollSnapOffset
{
position: relative;
top: calc( -30vh - 4rem ); /* - word top sticky offset - word font size*/
left: 0;
max-height: 0;
scroll-snap-align: start;
}


.dictWordChanger{
    margin-top: 4rem;
}

.dictWordAdder{
}

.deffinition
{
    display: block;
    font-size: 1.5em;
    min-width:30%;
    max-width: 50ch;
    margin-left: auto;
    margin-right: calc(20%);

line-height: 1.6em;
margin-top:5rem;
margin-bottom: 5rem;
font-family: fontDefinition;
}

.invisible{
    visibility:hidden;
}

.dictLink:hover{
text-decoration: underline;
cursor: pointer;
}

#sidebar, #sidebar>*, #sidebar>*>*
{
  z-index: 80;
}

#sidebar
{
  z-index: 80;
    white-space: nowrap;
    overflow: visible;
}

#sidebar>div
{
  position: relative;
  left:0;
    transform-origin: left top;
    white-space: nowrap;
    overflow: visible;
    min-width: 100vh;
    width: 100vh;
    background-color: black;
}

#sidebar>div>*
{
display: inline-block;

}

#sidebar>div>h1
{
font-size: 2.35rem;
margin-top: 1rem;
margin-bottom: 1rem;
margin-left:1.5rem;
}

.sidebarContainer
{
  position: absolute;
  top: 100vh;
  transform-origin: top left;
  transform: rotate(270deg);
}

#searchField
{
    background-color: black;
vertical-align: top;
margin-top: 1.3rem;
    display: inline-block;
    margin-left: 1.5rem;
}

#searchField>img
{
height:2.2rem;
width: auto;
margin-top:0.2rem;
margin-left: 0.25rem;
}

#searchField>img:hover
{
    cursor: pointer;
    filter: invert(15%);
}

#searchField>input
{
  vertical-align: top;
display:inline-block;

font-size: 1.3rem;
font-family: fontTitle;
background-color: white;
border-radius: 4px;
padding: 0.25rem 0.5rem;
}

.searchfieldGrid
{
  display: grid;
  grid-template-columns: 64px auto 1fr;
  position: fixed;
  width: 100vw;
  top:0;
  left:0;
}

.searchfieldGridItem3
{
  background-image: linear-gradient(to right, rgb(0, 0, 0) , rgba(0, 0, 0, 0));
}

a{
  color: #d36235;
}

a:visited
{
  color: #d3bb35;
}


.title
{
    
    text-align: left;
    color: white;
    text-decoration: none;
    display: block;
    margin: auto;
    margin-bottom: 2rem;
    
}

.title:hover
{
text-decoration: underline;
}

.halfTransparent
{
    opacity: 0.55;
}

.title>a
{
color: inherit;
text-decoration: inherit;
}


.parallax-window
{
    width:100%;
    height: 100vh;
    background: transparent;
    position: fixed;
    top:0;
    left:0;
    pointer-events: none;
}



/* Spinner stuff */

@keyframes lds-spinner {
  0% {
    opacity: 1;
  }
  100% {
    opacity: 0;
  }
}
@-webkit-keyframes lds-spinner {
  0% {
    opacity: 1;
  }
  100% {
    opacity: 0;
  }
}
.lds-spinner {
  position: relative;
}
.lds-spinner div {
  left: 92px;
  top: 32px;
  position: absolute;
  -webkit-animation: lds-spinner linear 1s infinite;
  animation: lds-spinner linear 1s infinite;
  background: #000000;
  width: 16px;
  height: 12px;
  border-radius: 0%;
  -webkit-transform-origin: 8px 68px;
  transform-origin: 8px 68px;
}
.lds-spinner div:nth-child(1) {
  -webkit-transform: rotate(0deg);
  transform: rotate(0deg);
  -webkit-animation-delay: -0.916666666666667s;
  animation-delay: -0.916666666666667s;
}
.lds-spinner div:nth-child(2) {
  -webkit-transform: rotate(30deg);
  transform: rotate(30deg);
  -webkit-animation-delay: -0.833333333333333s;
  animation-delay: -0.833333333333333s;
}
.lds-spinner div:nth-child(3) {
  -webkit-transform: rotate(60deg);
  transform: rotate(60deg);
  -webkit-animation-delay: -0.75s;
  animation-delay: -0.75s;
}
.lds-spinner div:nth-child(4) {
  -webkit-transform: rotate(90deg);
  transform: rotate(90deg);
  -webkit-animation-delay: -0.666666666666667s;
  animation-delay: -0.666666666666667s;
}
.lds-spinner div:nth-child(5) {
  -webkit-transform: rotate(120deg);
  transform: rotate(120deg);
  -webkit-animation-delay: -0.583333333333333s;
  animation-delay: -0.583333333333333s;
}
.lds-spinner div:nth-child(6) {
  -webkit-transform: rotate(150deg);
  transform: rotate(150deg);
  -webkit-animation-delay: -0.5s;
  animation-delay: -0.5s;
}
.lds-spinner div:nth-child(7) {
  -webkit-transform: rotate(180deg);
  transform: rotate(180deg);
  -webkit-animation-delay: -0.416666666666667s;
  animation-delay: -0.416666666666667s;
}
.lds-spinner div:nth-child(8) {
  -webkit-transform: rotate(210deg);
  transform: rotate(210deg);
  -webkit-animation-delay: -0.333333333333333s;
  animation-delay: -0.333333333333333s;
}
.lds-spinner div:nth-child(9) {
  -webkit-transform: rotate(240deg);
  transform: rotate(240deg);
  -webkit-animation-delay: -0.25s;
  animation-delay: -0.25s;
}
.lds-spinner div:nth-child(10) {
  -webkit-transform: rotate(270deg);
  transform: rotate(270deg);
  -webkit-animation-delay: -0.166666666666667s;
  animation-delay: -0.166666666666667s;
}
.lds-spinner div:nth-child(11) {
  -webkit-transform: rotate(300deg);
  transform: rotate(300deg);
  -webkit-animation-delay: -0.083333333333333s;
  animation-delay: -0.083333333333333s;
}
.lds-spinner div:nth-child(12) {
  -webkit-transform: rotate(330deg);
  transform: rotate(330deg);
  -webkit-animation-delay: 0s;
  animation-delay: 0s;
}
.lds-spinner {
  width: 99px !important;
  height: 99px !important;
  -webkit-transform: translate(-49.5px, -49.5px) scale(0.495) translate(49.5px, 49.5px);
  transform: translate(-49.5px, -49.5px) scale(0.495) translate(49.5px, 49.5px);
}

/*end spinenr stuff */


.aboutContainer
{
    z-index: 99;
    position: fixed;
    top:0;
    left:0;
    background-color: #0000005b;
    backdrop-filter: blur(6px);  
  -webkit-backdrop-filter: blur(6px);
    width:100vw;
    height:100vh;
    transition: opacity 0.25s;
    opacity: 0;
    visibility: hidden;
    pointer-events: none;
}

.aboutContainerContent
{
  text-align: left;
    max-width: 70rem;
    max-height: 100%;
    margin: auto;
    background-color: rgba(255, 255, 255, 0.904);
    padding:2rem;
    border-bottom: rgb(185, 185, 185) 5px solid;
    border-radius: 2rem;
    display: grid;
    grid-template-rows: auto 1fr auto;

    transform: translate(-100vw,0);

    transition: transform 0.5s cubic-bezier(.01,.8,.49,1);

}

.aboutTitle
{

}

.aboutContainerContent > button
{
  width: auto;
  border: 3px black solid;
  background-color: white;
  margin:1rem auto 0 auto;
  font-size: 1.5rem;
  padding: 0.5rem;
}

.aboutContainerContent > .aboutContainerContentText
{
overflow: auto;
display: block;
line-height: 1.5;
}


.aboutContainerContent > button:hover
{
  text-decoration: underline;
  background-color: black;
  color: white;
  cursor: pointer;
}

a:hover{
cursor: pointer;
}

.noselect {
  -webkit-touch-callout: none; /* iOS Safari */
    -webkit-user-select: none; /* Safari */
     -khtml-user-select: none; /* Konqueror HTML */
       -moz-user-select: none; /* Firefox */
        -ms-user-select: none; /* Internet Explorer/Edge */
            user-select: none; /* Non-prefixed version, currently
                                  supported by Chrome and Opera */
}

.dedictName{
font-style: italic;
}

.highlight
{
  padding: 0.25rem 0.5rem;
}

.highlightNo
{
  background-color: rgba(255, 0, 0, 0.267);
}

.highlightOK
{
  background-color: rgba(0, 255, 0, 0.301);
}

.highlightUhOh
{
  background-color: rgba(255, 166, 0, 0.288);
}

.listBrowsers>li{
  margin: 1rem 0;
}

.copyrightNotice
{
  font-size: 0.66rem;
}

#loadingBlocker
{
  z-index: 1234;
  position: absolute;
  left:0;
  top:0;
  width: 100vw;
  height:100vh;
  background-color: rgba(255, 255, 255, 0.644);
  display:grid;
  grid-template-rows: 1fr auto 1fr;
  opacity:0;
  pointer-events: none;
  transition: opacity 0.25s, transform 0.25s;
  transform: scale(10);
}

